# take-home

./: README.md  pyproject.toml
environments/data_tasks/: README.md  data_tasks.py  pyproject.toml
environments/data_tasks/tasks/analyze-company-data/: instruction.md  task.toml
environments/data_tasks/tasks/analyze-company-data/environment/: Dockerfile  prepare_data.py
environments/data_tasks/tasks/analyze-company-data/solution/: solve.sh
environments/data_tasks/tasks/analyze-company-data/tests/: test.sh  test_outputs.py
environments/data_tasks/tasks/customers-spending-behavior/: instruction.md  task.toml
environments/data_tasks/tasks/customers-spending-behavior/environment/: Dockerfile  prepare_data.py
environments/data_tasks/tasks/customers-spending-behavior/solution/: analysis.ipynb  solve.sh
environments/data_tasks/tasks/customers-spending-behavior/tests/: test.sh  test_analysis.py
environments/data_tasks/tasks/pandas-memory-optimization-colab/: instruction.md  task.toml
environments/data_tasks/tasks/pandas-memory-optimization-colab/environment/: Dockerfile  prepare_data.py  process_data.ipynb
environments/data_tasks/tasks/pandas-memory-optimization-colab/tests/: test.sh  (+2 more)
environments/swe_harbor/: README.md  RUBRIC.md  pyproject.toml  swe_harbor.py
environments/swe_harbor/tasks/_template/: instruction.md  task.toml
environments/swe_harbor/tasks/fix-dotenv-parser/: instruction.md  task.toml
environments/swe_harbor/tasks/fix-flask-api/: instruction.md  task.toml
environments/swe_harbor/tasks/implement-linked-list/: instruction.md  task.toml
(+25 files in other folders)
