[project]
name = "data-tasks"
description = "Harbor-format data science / analytics tasks environment"
license = "MIT"
tags = ["eval", "cli_agent", "data-science"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10.dev4",
    "prime-sandboxes>=0.2.10",
    "tomli>=2.3.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["data_tasks.py", "pyproject.toml", "tasks/**/*"]

[tool.verifiers.eval]
num_examples = 1
rollouts_per_example = 2

[tool.ruff]
exclude = ["tasks/**"]
